[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/BoardController.gd" type="Script" id=4]
[ext_resource path="res://Font/Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/EnergyDisplay.gd" type="Script" id=6]
[ext_resource path="res://Scripts/AStar2DVisualizer.gd" type="Script" id=7]
[ext_resource path="res://Scripts/HealthDisplay.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PathfindingController.gd" type="Script" id=13]
[ext_resource path="res://Scripts/BoardGenerator.gd" type="Script" id=15]
[ext_resource path="res://Sprites/BoardLayoutTileset.tres" type="TileSet" id=16]

[node name="Main Scene" type="Node2D"]
script = ExtResource( 2 )

[node name="BoardController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BoardGenerator" type="Node" parent="BoardController"]
script = ExtResource( 15 )

[node name="PathfindingController" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 32, 56 )
current = true
zoom = Vector2( 0.35, 0.35 )

[node name="AStarVisualizer" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, -8 )

[node name="Tilemaps" type="Node2D" parent="."]

[node name="EffectTileMap" type="TileMap" parent="Tilemaps"]
z_index = 3
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="NonogramTileMap" type="TileMap" parent="Tilemaps"]
visible = false
z_index = 2
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="WorldTileMap" type="TileMap" parent="Tilemaps"]
visible = false
z_index = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="SolutionTileMap" type="TileMap" parent="Tilemaps"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="DungeonBoards" type="TileMap" parent="Tilemaps"]
position = Vector2( 256, -320 )
tile_set = ExtResource( 16 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2, 10, 0, 3, 6, 0, 5, 10, 0, 7, 1, 0, 11, 10, 0, 65537, 0, 0, 65538, 10, 0, 65541, 10, 0, 65547, 4, 0, 65550, 0, 0, 131072, 4, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 4, 0, 131077, 10, 0, 131078, 4, 0, 131079, 10, 0, 131080, 10, 0, 131081, 10, 0, 131082, 4, 0, 131083, 10, 0, 131084, 10, 0, 131085, 10, 0, 131086, 10, 0, 131087, 10, 0, 196620, 4, 0, 196623, 7, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262148, 7, 0, 262153, 6, 0, 262156, 10, 0, 262157, 7, 0, 262159, 1, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 4, 0, 327687, 10, 0, 327689, 10, 0, 327690, 10, 0, 327691, 10, 0, 327692, 10, 0, 327693, 10, 0, 327694, 10, 0, 327695, 10, 0, 393216, 5, 0, 393217, 7, 0, 393219, 10, 0, 393220, 6, 0, 393225, 10, 0, 393229, 4, 0, 458757, 7, 0, 458761, 4, 0, 458763, 7, 0, 458765, 10, 0, 458767, 5, 0 )

[node name="NonogramBoards" type="TileMap" parent="Tilemaps"]
position = Vector2( 256, -64 )
tile_set = ExtResource( 16 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 9, 0, 13, 9, 0, 14, 8, 0, 15, 8, 0, 65536, 8, 0, 65537, 9, 0, 65538, 8, 0, 65539, 9, 0, 65540, 9, 0, 65541, 8, 0, 65542, 9, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 9, 0, 65548, 9, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 131072, 8, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 9, 0, 131078, 9, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 9, 0, 131083, 9, 0, 131084, 9, 0, 131085, 8, 0, 131086, 8, 0, 131087, 8, 0, 196608, 8, 0, 196609, 9, 0, 196610, 9, 0, 196611, 8, 0, 196612, 8, 0, 196613, 9, 0, 196614, 9, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 9, 0, 196619, 8, 0, 196620, 9, 0, 196621, 9, 0, 196622, 8, 0, 196623, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 9, 0, 262147, 8, 0, 262148, 8, 0, 262149, 9, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 9, 0, 262154, 8, 0, 262155, 8, 0, 262156, 9, 0, 262157, 9, 0, 262158, 9, 0, 262159, 8, 0, 327680, 9, 0, 327681, 8, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 8, 0, 327687, 9, 0, 327688, 8, 0, 327689, 9, 0, 327690, 9, 0, 327691, 9, 0, 327692, 9, 0, 327693, 9, 0, 327694, 9, 0, 327695, 8, 0, 393216, 9, 0, 393217, 9, 0, 393218, 9, 0, 393219, 9, 0, 393220, 9, 0, 393221, 9, 0, 393222, 9, 0, 393223, 9, 0, 393224, 8, 0, 393225, 9, 0, 393226, 9, 0, 393227, 9, 0, 393228, 9, 0, 393229, 9, 0, 393230, 9, 0, 393231, 8, 0, 458752, 9, 0, 458753, 9, 0, 458754, 9, 0, 458755, 9, 0, 458756, 9, 0, 458757, 9, 0, 458758, 9, 0, 458759, 9, 0, 458760, 8, 0, 458761, 8, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 9, 0, 458766, 8, 0, 458767, 8, 0 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Entities" type="Node2D" parent="."]

[node name="UI" type="Node" parent="."]

[node name="EnergyDisplay" type="Label" parent="UI"]
margin_left = -80.0
margin_top = 96.0
margin_right = -38.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 5 )
text = "0 / 0"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="EnergyLabel" type="Label" parent="UI"]
margin_left = -80.0
margin_top = 80.0
margin_right = -40.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 5 )
text = "Energy:"
align = 1
valign = 1

[node name="HealthDisplay" type="Label" parent="UI"]
margin_left = -80.0
margin_top = 56.0
margin_right = -38.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "0 / 0"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="HealthLabel" type="Label" parent="UI"]
margin_left = -80.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
text = "Health:"
align = 1
valign = 1

[connection signal="energy_changed" from="Player" to="UI/EnergyDisplay" method="_on_Player_energy_changed"]
[connection signal="health_changed" from="Player" to="UI/HealthDisplay" method="_on_Player_health_changed"]
